# CommodityFuturesTerminal

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: dashboard.py
data/processed/: backtest_walk_forward.csv  crude_weekly.csv  latest_forecast.json  model_leaderboard_walk_forward.csv
notebooks/: 01_crude_oil_mvp.py
src/: __init__.py
src/backtest/: __init__.py  engine.py
src/data/: __init__.py  curves.py  dataset.py  prices.py  real.py  sample.py
src/features/: __init__.py  crude_features.py
src/models/: __init__.py  conformal.py
src/reports/: __init__.py  memo.py
tests/: test_crude_mvp.py
