[project]
name = "commodity-futures-terminal"
version = "0.1.0"
description = "Crude oil futures research terminal with supply-demand, positioning, and uncertainty-aware trade setup analysis."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "plotly>=5.18",
  "streamlit>=1.31",
  "yfinance>=0.2",
  "xlrd>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
